# z_vcu

./: .clangd  CMakeLists.txt  prj.conf
.claude/: settings.local.json
documents/code docs/: QUICK_START.md  VCU_PINOUT_REFERENCE.md  readme.md
documents/dbcs/: hv500_can2_map_v25_SID (1).dbc
include/: APPS.h  PedalSensors.h  adc.h  can.h  hardware.h  system.h  vehicle_state.h
include/can_decoders/: dti_decoders.h  dti_encoders.h  logger_encoders.h
include/threads/: APPS.h  Logger.h  VSM_task.h  system.h
src/: APPS.cpp  PedalSensors.cpp  PedalSensors.h  adc.cpp  can.cpp  hardware.cpp  main.c  main.cpp  system.cpp
src/can_decoders/: dti_decoders.cpp  dti_encoders.cpp  logger_encoders.cpp
src/threads/: APPS.cpp  Logger.cpp  VSM_task.cpp
